unpackaged/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A flag that captures if a contact record is active. If unchecked, system should assume that record is inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>