unpackaged/main/default/objects/Contact/fields/After_Hours__c.field-meta.xml
<CustomField>
    <fullName>After_Hours__c</fullName>
    <label>After Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Alternate Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>