unpackaged/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>TEXT(MONTH( Birthdate ))  + &quot;/&quot; + TEXT(DAY( Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>