unpackaged/main/default/objects/Contact/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Part of HRP-12459</description>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>