unpackaged/main/default/objects/Contact/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Company Size, maps from lead object</description>
    <inlineHelpText>Company Size, maps from lead object</inlineHelpText>
    <label>Company Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>