unpackaged/main/default/objects/Contact/fields/Contact_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Name Change</label>
    <type>Checkbox</type>
</CustomField>