unpackaged/main/default/objects/Contact/fields/Current_Blood_Donor__c.field-meta.xml
<CustomField>
    <fullName>Current_Blood_Donor__c</fullName>
    <description>Part of HRP-12459</description>
    <label>Current Blood Donor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>