unpackaged/main/default/objects/Contact/fields/DeActivation_Date__c.field-meta.xml
<CustomField>
    <fullName>DeActivation_Date__c</fullName>
    <description>Date when a contact has do not contact status</description>
    <inlineHelpText>Date when a contact has do not contact status</inlineHelpText>
    <label>DeActivation Date</label>
    <type>Date</type>
</CustomField>