unpackaged/main/default/objects/Contact/fields/Do_Not_Call_Image__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Image__c</fullName>
    <formula>IF ( Do_Not_Contact__c ==true, IMAGE(&quot;https://biosf--prodcopy--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=068050000018724&amp;operationContext=CHATTER&amp;contentId=05T05000004FwEZ&quot;, &quot;Do Not Contact Image&quot;,80,120),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Contact Image</label>
    <type>Text</type>
</CustomField>