unpackaged/main/default/objects/Contact/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <description>used to capture an external system ID for data loads and integrations</description>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>