unpackaged/main/default/objects/Contact/fields/Gearset_BSF_Demo_Field__c.field-meta.xml
<CustomField>
    <fullName>Gearset_BSF_Demo_Field__c</fullName>
    <description>Gearset End to End Demo</description>
    <label>Gearset BSF Demo Field</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>