unpackaged/main/default/objects/Contact/fields/MailingStreet_1__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet_1__c</fullName>
    <label>Mailing Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>