unpackaged/main/default/objects/Contact/fields/MailingStreet_2__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet_2__c</fullName>
    <label>Mailing Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>