unpackaged/main/default/objects/Contact/fields/Original_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Original Service Date</label>
    <type>Date</type>
</CustomField>