unpackaged/main/default/objects/Contact/fields/OtherStreet_1__c.field-meta.xml
<CustomField>
    <fullName>OtherStreet_1__c</fullName>
    <label>Secondary Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>