unpackaged/main/default/objects/Contact/fields/OtherStreet_2__c.field-meta.xml
<CustomField>
    <fullName>OtherStreet_2__c</fullName>
    <label>Secondary Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>