unpackaged/main/default/objects/Contact/fields/Personal_Story__c.field-meta.xml
<CustomField>
    <fullName>Personal_Story__c</fullName>
    <description>Personal Story, comes from lead object</description>
    <inlineHelpText>Personal Story, comes from lead object</inlineHelpText>
    <label>Personal Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>