unpackaged/main/default/objects/Contact/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Preferred Pronouns</label>
    <type>TextArea</type>
</CustomField>