unpackaged/main/default/objects/Contact/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>TextArea</type>
</CustomField>