unpackaged/main/default/objects/Contact/fields/ReActivation_Date__c.field-meta.xml
<CustomField>
    <fullName>ReActivation_Date__c</fullName>
    <description>Date contact is reactivated , when a contact has prior do not contact status</description>
    <inlineHelpText>Date contact is reactivated , when a contact has prior do not contact status</inlineHelpText>
    <label>ReActivation Date</label>
    <type>Date</type>
</CustomField>