unpackaged/main/default/objects/Contact/fields/Red_Cross_Email__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_Email__c</fullName>
    <formula>CONTAINS( Email , &quot;redcross.org&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Cross Email</label>
    <type>Checkbox</type>
</CustomField>