unpackaged/main/default/objects/Contact/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>Part of HRP-12459</description>
    <label>Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Red Cross Account Manager/Representative</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Family/Friend Referral</fullName>
            </value>
            <value>
                <fullName>My School</fullName>
            </value>
            <value>
                <fullName>Social Media Outlet (Facebook, Twitter, LinkedIn)</fullName>
            </value>
            <value>
                <fullName>General Referral</fullName>
            </value>
            <value>
                <fullName>National Partnership/National Account</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>