unpackaged/main/default/objects/Contact/fields/Referrer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Name__c</fullName>
    <description>Part of HRP-12459</description>
    <label>Referrer&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>