unpackaged/main/default/objects/Contact/validationRules/After_Hours_Phone_Field_Restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>After_Hours_Phone_Field_Restrictions</fullName>
    <active>true</active>
    <description>If the After Hours Phone picklist value is Home Phone, the Home Phone field must be populated. The same applies for Mobile Phone and Work Phone.</description>
    <errorConditionFormula>ISPICKVAL(  After_Hours__c  , &quot;Home Phone&quot;) &amp;&amp; ISBLANK( HomePhone ) ||
ISPICKVAL( After_Hours__c , &quot;Mobile Phone&quot;) &amp;&amp; ISBLANK( MobilePhone ) ||
ISPICKVAL( After_Hours__c , &quot;Work Phone&quot;) &amp;&amp; (ISBLANK( OtherPhone ))</errorConditionFormula>
    <errorDisplayField>After_Hours__c</errorDisplayField>
    <errorMessage>The phone number you have selected to be the After Hours Phone is not populated. Please enter a value in that phone field or select a different value.</errorMessage>
</ValidationRule>