unpackaged/main/default/objects/Contact/validationRules/Contact_First_Name_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_First_Name_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>