unpackaged/main/default/objects/Contact/validationRules/Mobile_Phone_Format_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Phone_Format_Restriction</fullName>
    <active>false</active>
    <description>Phone format must be xxx-xxx-xxxx</description>
    <errorConditionFormula>NOT(
 OR(
  LEN (MobilePhone) = 0,
  REGEX(MobilePhone, &quot;[0-9]{3}-[0-9]{3}-[0-9]{4}&quot;)

 )
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please add a valid phone number in the following format: xxx-xxx-xxxx</errorMessage>
</ValidationRule>