unpackaged/main/default/objects/Contact/validationRules/Prevent_Spaces_In_LastName.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Spaces_In_LastName</fullName>
    <active>true</active>
    <description>Last name cannot contain any spaces.</description>
    <errorConditionFormula>AND(
    CONTAINS(LastName, &quot; &quot;),
    OR(
       ISNEW(),
       ISCHANGED(LastName)
    )
)</errorConditionFormula>
    <errorMessage>Last name cannot contain any spaces.</errorMessage>
</ValidationRule>