unpackaged/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS1_CITY</columns>
    <columns>CONTACT.ADDRESS1_STATE_CODE</columns>
    <columns>CONTACT.ADDRESS1_ZIP</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE5</columns>
    <columns>Do_Not_Contact__c</columns>
    <columns>Primary_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>